CSS/global-styles.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,600;0,700;1,400&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Playfair+Display:ital,wght@0,500;0,600;0,700;1,400&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    font-family: 'Montserrat', sans-serif;
    overflow-x: hidden;
}

input,
textarea {
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    border: none;
    outline: none;
    padding: 4px 8px; 
    color: var(--primary-color);
    font-size: 1rem;
    width: 90%;
    border-bottom: 2px solid var(--primary-color);
}

:root {
    --primary-color: #3D59BF;
    --secondary-color: #F2A32C;
    --text-color: #070A0F;
    --text-color-faded: rgba(7, 10, 15, 0.85);
}

.heading {
    font-size: 3.5rem;
    font-weight: bold;
    color: var(--primary-color);
}

a {
    text-decoration: none;
    color: #fff;
    cursor: pointer;
}

.main__body {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 5rem;
    margin: auto;
    margin-top: 3rem;
    margin-bottom: 5rem;
}

.container {
    margin: 0 auto;
    max-width: 1920px;
}

.child-container {
    width: 100%;
    margin: 0 auto;
    max-width: 1300px; 
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.btn {
    padding: 0.75rem 1.2rem;
    border-radius: 5px;
    transition: all 0.3s ease;
    background-color: var(--primary-color);
    border: 2px solid var(--primary-color);
}

.btn-outline {
    padding: 0.75rem 1.2rem;
    border-radius: 5px;
    transition: all 0.3s ease;
    background-color: #fff;
    border: 2px solid var(--primary-color);
}

.btn-hover:hover {
    transform: scale(0.95);
    transition: all 0.3s ease;
}

.card {
    height: 400px;
    width: 400px;
    position: relative;
    justify-content: space-around;
    border-radius: 6px;
    box-shadow: -5px -5px 20px 1px rgba(0, 0, 0, 0.1), 5px 5px 20px 1px rgba(0, 0, 0, 0.1);
    transition: 0.3s ease-in-out;
}

.card:hover {
    transform: translateY(-10px);
    transition: 0.3s ease-in-out;
}

.cards-container {
    width: 100%;
    flex: 1;
    gap: 8rem;
}

.card-text {
    text-align: center;
    font-size: 1rem;
    font-weight: 600;
    color: var(--primary-color);
    width: 90%;
}

.card-heading {
    text-align: center;
    width: 300px;
    font-weight: bold;
    color: var(--primary-color);
}

.card::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 4rem;
    height: 4rem;
    background-color: var(--secondary-color);
    z-index: -1;
    border-top-right-radius: 0;
    border-top-left-radius: 6px;
    border-bottom-right-radius: 100%;
    border-bottom-left-radius: 0;
}

